examples/test/testpolicy6147.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6147
  namespace: namespace434
spec:
  podSelector:
    matchLabels:
      key1: value31
      key43: value5
      key48: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value34
          key2: value40
          key43: value42
      podSelector:
        matchLabels:
          key24: value47
          key21: value41
